# RobustSleepNet

./: LICENSE  README.md  launch_test.sh  pyproject.toml
pretrained_model/: description.csv
pretrained_model/0dfcee73-055a-4c4d-929c-8fdf630e14f1/: description.json
pretrained_model/40c76916-23f2-4697-91f9-0ef91440f57d/: description.json
pretrained_model/415fe39c-0729-41b6-bf8a-a04570042f5c/: description.json
pretrained_model/8f1969fa-0f79-426e-aaa5-7ab3a076a215/: description.json
pretrained_model/a2eb4aed-90de-4968-8535-a424588c0dfa/: description.json
pretrained_model/be685bd5-eaab-4c22-b2e6-c487ecc8773c/: description.json
pretrained_model/e5844e92-6b9b-4033-8362-2f139c7bab0e/: description.json
pretrained_model/fdbd193a-0408-4fc8-9a6a-a18351459512/: description.json
robust_sleep_net/: settings_template.py
robust_sleep_net/datasets/: data_augmentation.py  dataset.py
robust_sleep_net/logger/: logger.py
robust_sleep_net/models/modulo_net/: net.py  normalization.py
robust_sleep_net/preprocessings/: epoch_features_processing.py  filters.py  h5_to_memmap.py  signal_processing.py
robust_sleep_net/trainers/: __init__.py  regularization.py  trainer.py  trainer_multi_dataset.py
robust_sleep_net/utils/: run_experiments.py  run_supervised_experiments.py  scores.py  train_test_val_split.py  utils.py
robust_sleep_net/utils/inference/: edf_to_h5.py  inference.py  run.py
scripts/datasets_to_h5/cap/: to_h5_mne.py
scripts/datasets_to_h5/dreem_open_datasets/: to_h5.py
scripts/evaluation/fig_3/: eval.py
scripts/minimal_exemple/: download_data.py  run.py
(+97 files in other folders)
